<resources>
    <string name="app_name">Canchas2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="reservations">Reservas</string>
    <string name="tournaments">Torneos</string>
    <string name="share">Compartir</string>
    <string name="contact">Contacto</string>
    <string name="map">Mapa</string>
    <string name="home">Home</string>
</resources>
